<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddMeetingActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Meeting date"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_meeting_edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:padding="@dimen/padding"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="Click to set date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldTimeStart"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:hint="Meeting start time"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/outlinedTextFieldTimeEnd"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_meeting_edit_text_time_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:padding="@dimen/padding"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="Click to set start time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldTimeEnd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:hint="Meeting end time"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outlinedTextFieldTimeStart"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_meeting_edit_text_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:padding="@dimen/padding"
            android:gravity="center"
            android:hint="Click to set end time" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/spinnerRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/outlinedTextFieldSubject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outlinedTextFieldSubject" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldSubject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="Meeting subject"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/add_meeting_color_picker_btn"
        app:layout_constraintStart_toEndOf="@+id/spinnerRooms"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldTimeStart">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_meeting_edit_text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Click to set subject"
            android:inputType="text"
            android:padding="@dimen/padding"
            tools:layout_editor_absoluteX="46dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmployeesList"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="Employees List"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/add_meeting_buttonResetEmployees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldSubject">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_meeting_edit_text_employees_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="Click to add employees"
            android:inputType="text"
            android:padding="@dimen/padding"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_meeting_text_view_employees_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        android:background="@drawable/border"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:padding="5dp"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@+id/add_meeting_buttonAddMeeting"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEmployeesList"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEmployeesList"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmployeesList" />

    <Button
        android:id="@+id/add_meeting_buttonAddEmployees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textAllCaps="false"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outlinedTextFieldEmployeesList" />

    <Button
        android:id="@+id/add_meeting_buttonResetEmployees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:textAllCaps="false"
        android:text="Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_buttonAddEmployees" />

    <Button
        android:id="@+id/add_meeting_buttonAddMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="Confirm Meeting"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_buttonResetEmployees"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_color_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:tooltipText="Color Choice"
        app:backgroundTint="@color/teal_200"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/outlinedTextFieldSubject"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldTimeEnd"
        app:layout_constraintTop_toTopOf="@+id/outlinedTextFieldSubject" />

</androidx.constraintlayout.widget.ConstraintLayout>